# Riru-SsageHook

./: README.md  README_Zh.md  module.example.gradle  start
.github/workflows/: main.yml
module/src/main/: AndroidManifest.xml
module/src/main/cpp/: CMakeLists.txt  Hook.cpp  Hook.h  main.cpp
module/src/main/cpp/include/: config.h
module/src/main/cpp/include/And64InlineHook/: And64InlineHook.cpp
module/src/main/cpp/include/Dobby/: README.md
module/src/main/cpp/include/hello_imgui/: CMakeLists.txt
module/src/main/cpp/utilities/: Game.cpp  Game.h  Gui.cpp  Gui.h  GuiLib.cpp  GuiLib.h  GuiUtils.cpp  GuiUtils.h  Tools.cpp  Tools.h  log.h
